fix alignment

--- a/css/sass/includes/_editor.scss
+++ b/css/sass/includes/_editor.scss
@@ -11,6 +11,7 @@
 		margin: 0 auto;
 		text-align: left;
 		cursor: text;
+		height: 0;
 		
 		textarea {
 			background: $chalk;
